# slonzaczqa.github.io

./: .gitignore  404.html  README.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  sitemap.xml
.github/workflows/: deploy-pages.yml
assets/stylesheets/: slonzaczqa.css
docs/: index.html
news/: index.html
news/archive/2024/: index.html
news/witaj/: index.html
overrides/: main.html  no_date.html  page.html
overrides/assets/stylesheets/: slonzaczqa.css
overrides/partials/: comments.html  copyright.html  footer.html  header.html  nav-item.html  nav.html
overrides/slonzaczqa/: about_me_sidebar.html  content_footer.html  newsletter_sidebar.html
pages/polityka-prywatnosci/: index.html
pages/regulamin/: index.html
prezentacje/SlonzaczQA-18/: index.html
prezentacje/slonzaczqa-18/: index.html
prezentacje/slonzaczqa-19/: index.html
search/: search_index.json
slonzaczqa/: 01_about.md  03_team.md  CNAME
slonzaczqa/.obsidian/: app.json  appearance.json  command-palette.json  community-plugins.json  core-plugins.json  daily-notes.json  graph.json  templates.json
slonzaczqa/00_prezentacje/: README.md
slonzaczqa/02_meetup/: README.md  witaj.md
slonzaczqa/02_news/: README.md
slonzaczqa/99_pages/: README.md  polityka-prywatnosci.md  regulmin.md
slonzaczqa/_prezentacje/: README.md  SlonzaczQA-18.md  slonzaczqa-19.md
slonzaczqa/_templates/: _post_with_image.md  _post_with_youtube.md
team/: index.html
(+15 files in other folders)
