[tool.poetry]
name = "slonaczqa"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mkdocs-rss-plugin = "^1.17.1"
mkdocs-publisher = "^1.4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
